删除不应该存在的params，简化结构